# opencast-txline

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/create/: page.tsx
app/leaderboard/: page.tsx
app/markets/: page.tsx
app/my-markets/: page.tsx
app/parlays/: page.tsx
app/portfolio/: page.tsx
app/settings/: page.tsx
app/worldcup/: page.tsx
components/create/: adapter-badge.tsx  parlay-builder.tsx  recommended-bets-sheet.tsx
components/landing/: bet-preview.tsx  built-different.tsx  faq-section.tsx  final-cta.tsx  hero.tsx  how-it-works.tsx  landing-footer.tsx  landing-header.tsx  markets-preview.tsx  rails.tsx  reveal.tsx
components/market/: bet-type-icon.tsx  live-match-card.tsx  market-actions.tsx  market-card.tsx  market-status-badge.tsx  odds-chart.tsx  outcome-icon.tsx  recent-activity.tsx  resolution-source-badge.tsx  txline-odds-strip.tsx  verifiable-resolution-card.tsx
components/markets/: value-strip.tsx
components/shared/: address-display.tsx  app-header.tsx  avatar.tsx  copy-button.tsx  (+4 more)
lib/: brand-logos.tsx  db.ts  icons.tsx  keeper.ts  labels.ts  store.ts  teams.ts  types.ts  utils.ts  wallet.tsx  worldcup-data.ts
prisma/: schema.prisma
program/: Anchor.toml
program/programs/opencast_settlement/: Cargo.toml
program/programs/opencast_settlement/src/: lib.rs
scripts/: backfill-proofs.ts  build-idl.py  create-market.ts  e2e-create.ts  test-settle.ts  txline-activate.ts
(+86 files in other folders)
