[package]
name = "opencast_settlement"
version = "0.1.0"
description = "OpenCast — trustless World Cup market settlement via TxLINE proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opencast_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
